@@ -2,6 +2,7 @@ Version 3.6.0
 * SU table: make more IDI-FITS compliant
 * AG table: fill in antenna diameters, or 0 if not known.
   - values used in difxio: difxio/antenna_db.c
+* AG table: override mount type with antenna_db.c values
 
 Version 3.5.0
 * Remove duplicate RDATE keywords from AG and ML tables
